--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,19 +12,18 @@ html {
 }
 
 body {
-    font-size: 1.6 rem;
+    font-size: 1.6rem;
     font-family: $font-jost;
+    color: $green;
 }
 
 .header {
     max-width: 1440px;
     margin: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding: 4rem 15px 0 15px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 4rem;
 
     &__nav {
         display: flex;
@@ -35,7 +34,6 @@ body {
     }
 
     &__link {
-        font-size: 1.6rem;
         color: $green;
         text-decoration: none;
         &:hover {
@@ -44,7 +42,6 @@ body {
     }
 
     &__tel {
-        font-size: 1.6rem;
         color: $green;
         font-weight: 500;
         text-decoration: none;
@@ -75,7 +72,7 @@ body {
         font-size: 0.8rem;
         color: $white;
         position: absolute;
-        right: 1rem;
+        right: 0.6rem;
         top: 0.6rem;
     }
 }
@@ -87,3 +84,63 @@ body {
     width: 12.3rem;
     height: 3.2rem;
 }
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.main {
+    background-image: url(../images/main.png);
+    background-size: cover;
+    background-position-x: center;
+
+    &__item {
+        margin-left: 12.2rem;
+        max-width: 378px;
+        margin-top: 6.2rem;
+    }
+    &__link {
+        margin-top: 5.5rem;
+    }
+    &__text {
+        margin-top: 23.9rem;
+    }
+}
+.title {
+    font-family: $font-cormorant;
+    font-weight: 700;
+    font-size: 8rem;
+    margin: 0;
+    line-height: 100%;
+
+    &__span {
+        font-style: italic;
+    }
+
+    &_block {
+        .title__span {
+            display: block;
+        }
+    }
+}
+.description {
+    margin: 0;
+    line-height: 145%;
+
+    &_size-s {
+        font-size: 1.8rem;
+    }
+}
+.link {
+    color: $white;
+    text-transform: uppercase;
+    padding: 2.3rem 4.2rem;
+    background-color: $orange;
+    box-shadow: 0px 1rem 1.1rem 0.2rem rgba(207, 92, 13, 0.2);
+    text-decoration: none;
+    border-radius: 3.8rem;
+    display: inline-block;
+    letter-spacing: 0.13rem;
+}
+  
