--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -52,8 +52,8 @@ body {
 
     &__cart {
         display: block;
-        width: 3.8rem;
-        height: 3.8rem;
+        width: 4rem;
+        height: 4rem;
         border-radius: 100%;
         background-color: $orange;
         background-image: url(../images/cart.svg);
@@ -76,39 +76,40 @@ body {
         top: 0.6rem;
     }
 }
+
 .logo {
     display: block;
     background-image: url(../images/logo.svg);
     background-repeat: no-repeat;
-    background-size: cover;
-    width: 12.3rem;
+    background-size: contain;
+    width: 12rem;
     height: 3.2rem;
 }
+
 .container {
     max-width: 1440px;
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
 }
+
 .main {
     background-image: url(../images/main.png);
     background-size: cover;
     background-position-x: center;
+    background-repeat: no-repeat;
     position: relative;
     padding-bottom: 187px;
+    z-index: 0;
 
     &__item {
         margin-left: 12.2rem;
         max-width: 378px;
-        margin-top: 6.2rem;
+        margin-top: 6.1rem;
     }
 
     &__link {
         margin-top: 5.5rem;
-    }
-
-    &__text {
-        margin-top: 2.9rem;
     }
 
     &__flex {
@@ -119,8 +120,8 @@ body {
     }
 
     &__cover {
-        flex-basis: 763px;
-        height: 763px;
+        flex-basis: 758px;
+        height: 758px;
         border: 1px solid rgba($green, 0.4);
         border-radius: 100%;
         display: flex;
@@ -131,8 +132,8 @@ body {
     }
 
     &__line {
-        width: 658px;
-        height: 658px;
+        width: 656px;
+        height: 656px;
         border: 1px solid rgba($green, 0.4);
         border-radius: 100%;
         display: flex;
@@ -147,6 +148,10 @@ body {
         border-radius: 42rem;
     }
 
+    &__text {
+        padding-top: 3rem;
+    }
+
     &__btn {
         background-color: transparent;
         border: none;
@@ -156,12 +161,11 @@ body {
         text-align: left;
 
         &:hover {
-            .main__btn {
-                &::before {
-                    background-color: $orange;
-                    box-shadow: 0 0 0 4px $white, 0 0 0 5px $orange;
-                }
+            &::before {
+                background-color: $orange;
+                box-shadow: 0 0 0 4px $white, 0 0 0 5px $orange;
             }
+            
         }
 
         &::before {
@@ -215,6 +219,7 @@ body {
         bottom: 122px;
         right: 151px;
         width: 11rem;
+        z-index: -1;
     }
 
     &__avocado {
@@ -222,26 +227,34 @@ body {
         top: 45px;
         right: 30px;
         width: 18rem;
+        z-index: -1;
     }
+
     &__cucumber {
         position: absolute;
         top: -2px;
         left: 741px;
         width: 8.5rem;
+        z-index: -1;
     }
+
     &__pepper {
         position: absolute;
         top: 396px;
         left: 69px;
         width: 8.6rem;
+        z-index: -1;
     }
+
     &__olives {
         position: absolute;
         top: 796px;
         left: 0px;
         width: 10.5rem;
+        z-index: -1;
     }
 }
+
 .title {
     font-family: $font-cormorant;
     font-weight: 700;
@@ -259,6 +272,7 @@ body {
         }
     }
 }
+
 .description {
     margin: 0;
     line-height: 145%;
@@ -266,7 +280,12 @@ body {
     &_size-s {
         font-size: 1.8rem;
     }
+
+    &_size-m {
+        font-size: 2.4rem;
+    }
 }
+
 .link {
     color: $white;
     text-transform: uppercase;
@@ -278,4 +297,47 @@ body {
     display: inline-block;
     letter-spacing: 0.13rem;
 }
-  
+
+.offer {
+    background-image: url(../images/offer.png);
+    background-size: cover;
+    background-position-x: center;
+    background-repeat: no-repeat;
+    padding-top: 2rem;
+    padding-bottom: 200px;
+
+    &__text {
+        margin-top: 6rem;
+        max-width: 700px;
+    }
+
+    &__slider {
+        overflow: hidden;
+        padding-top: 100px;
+    }
+}
+
+.swiper {
+    overflow: initial;
+
+    &-slide {
+        border: 1px solid $green;
+    }
+
+    &-pagination {
+        display: none;
+    }
+
+    &-button-next, &-button-prev {
+        top: -60px;
+
+        &::after {
+            color: $green;
+        }
+    }
+
+    &-button-prev {
+        left: initial;
+        right: 100px;
+    }
+}
