--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -304,24 +304,138 @@ body {
     background-position-x: center;
     background-repeat: no-repeat;
     padding-top: 2rem;
-    padding-bottom: 200px;
+    padding-bottom: 12.8rem;
 
     &__text {
         margin-top: 6rem;
         max-width: 700px;
     }
+}
 
-    &__slider {
-        overflow: hidden;
-        padding-top: 100px;
-    }
+.slider {
+    overflow: hidden;
+    padding-top: 9.4rem;
 }
 
 .swiper {
     overflow: initial;
 
     &-slide {
-        border: 1px solid $green;
+        border: 1px solid rgba($green, 0.4);
+        border-radius: 2rem;
+        padding: 4rem 3.7rem;
+        box-sizing: border-box;
+        height: 520px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
+        z-index: 0;
+
+        &_white {
+            justify-content: flex-end;
+
+            &:hover {
+
+                .swiper-slide__hover {
+                    height: 233px;
+                    opacity: 1;
+                }
+
+                &::after {
+                    content: '';
+                    background-color:rgba($white, 0.55);
+                    width: calc(100% - 4px);
+                    height: calc(100% - 4px);
+                    position: absolute;
+                    top: 2px;
+                    left: 2px;
+                    z-index: -1;
+                }
+            }
+        }
+
+        &:hover {
+            box-shadow: 0 0 0 2px rgba($green, 0.4) inset;
+        }
+
+        &_milk {
+            background-image: url(../images/milk.png);
+        }
+
+        &_pasta {
+            background-image: url(../images/pasta.png);
+        }
+
+        &_steaks {
+            background-image: url(../images/steaks.png);
+        }
+
+        &__title {
+            font-family: $font-cormorant;
+            font-size: 3rem;
+            color: $green;
+            margin-bottom: 0;
+        }
+        
+        &__hover {
+            height: 0;
+            opacity: 0;
+        }
+
+        &__text {
+            color: rgba($green, 0.7);
+            line-height: 150%;
+            margin-top: 2.5rem;
+            margin-bottom: 3.4rem;
+            max-width: 263px;
+        }
+    
+        &__link {
+            text-transform: uppercase;
+            font-weight: 500;
+            color: $green;
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+            gap: 2rem;
+            letter-spacing: 0.1rem;
+            opacity: 0.8;
+
+            &:hover {
+                opacity: 1;
+            }
+
+            &::before {
+                content: '';
+                display: block;
+                width: 3rem;
+                height: 3rem;
+                background-image: url(../images/plus.svg);
+                background-size: cover;
+                background-repeat: no-repeat;
+            }
+        }
+
+        &__cover {
+           position: relative;
+           overflow: hidden;
+           width: 100%;
+           height: 293px;
+           text-align: center;
+        }
+
+        &__image {
+            height: 100%;
+        }
+
+        &__footer {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
     }
 
     &-pagination {
@@ -331,13 +445,135 @@ body {
     &-button-next, &-button-prev {
         top: -60px;
 
-        &::after {
-            color: $green;
+        &:hover {
+            &::after {
+                color: rgba($green, 1);                
+            }
         }
+
+        &::after {
+            color: rgba($green, 0.4);
+            font-size: 20px;
+        }
+    }
+
+    &-button-next {
+        right: -8px;
     }
 
     &-button-prev {
         left: initial;
-        right: 100px;
+        right: 72px;
     }
+}
+
+.counter {
+    display: flex;
+
+    &__btn {
+        cursor: pointer;
+        width: 50px;
+        height: 50px;
+        border: 1px solid $green;
+        background-color: transparent;
+        padding: 0;
+        background-position: center center;
+        border-radius: 100%;
+    }
+
+    &__minus {
+        pointer-events: none;
+        background-image: url(../images/minus-counter.svg);
+        background-size: 20px 11px;
+        background-repeat: no-repeat;
+        opacity: 0.4;
+    }
+
+    &__plus {
+        pointer-events: none;
+        background-image: url(../images/plus-counter.svg);
+        background-size: 20px 11px;
+        background-repeat: no-repeat;
+    }
+
+    &__input {
+        text-align: center;
+        font-size: 2.4rem;
+        width: 46px;
+        border: none;
+    }
+}
+
+.about {
+    /*background-image: url(../images/offer.png);
+    background-size: cover;
+    background-position-x: center;
+    background-repeat: no-repeat;*/
+    padding-top: 37px;
+    padding-bottom: 100px;
+
+    &__box {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 7rem;
+    }
+
+    &__text {
+        margin-left: 12rem;
+        flex-basis: 620px;
+    }
+
+    &__list {
+        list-style: none;
+        display: flex;
+        gap: 9rem;
+        font-family: $font-cormorant;
+        font-style: italic;
+        font-size: 3rem;
+        margin: 0;
+        padding-left: 0;
+    }
+
+    &__item {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        &::before {
+            content: '';
+            width: 84px;
+            height: 84px;
+            background-position: center center;
+            background-repeat: no-repeat;
+            border: 1px solid rgba($green, 0.4);
+            border-radius: 100%;
+            margin-bottom: 1.5rem;
+        }
+        
+        &:nth-child(1) {
+            &::before {
+                background-image: url(../images/about-icon-1.svg);
+                background-size: 44px 41px;
+            }
+        }
+
+        &:nth-child(2) {
+            &::before {
+                background-image: url(../images/about-icon-2.svg);
+                background-size: 40px 40px;
+            }
+        }
+
+        &:nth-child(3) {
+            &::before {
+                background-image: url(../images/about-icon-3.svg);
+                background-size: 45px 39px;
+            }
+        }
+    }
+
+
+
 }
