--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -70,6 +70,7 @@ body {
         position: relative;
         border: 1px solid $orange;
         transition: 0.3s;
+        cursor: pointer;
 
         &:hover {
             background-color: $green;
@@ -175,6 +176,7 @@ body {
                 background-color: $orange;
                 box-shadow: 0 0 0 4px $white, 0 0 0 5px $orange;
                 transition: 0.3s;
+                cursor: pointer;
             }
             
         }
@@ -194,7 +196,7 @@ body {
             left: 67px;
             line-height: 150%;
             transition: 0.3s;
-
+            
             &::before {
                 bottom: 12px;
                 right: -35px;
@@ -460,9 +462,11 @@ body {
             gap: 2rem;
             letter-spacing: 0.1rem;
             opacity: 0.8;
+            transition: 0.3s;
 
             &:hover {
                 opacity: 1;
+                transition: 0.3s;
             }
 
             &::before {
@@ -506,8 +510,9 @@ body {
         top: -60px;
 
         &:hover {
+
             &::after {
-                color: rgba($green, 1);                
+                color: rgba($green, 1);         
             }
         }
 
@@ -686,6 +691,7 @@ body {
         gap: 1.8rem;
         letter-spacing: 1px;
         opacity: 0.8;
+        transition: 0.3s;
 
         &::before {
             content: '';
@@ -723,10 +729,12 @@ body {
         text-decoration: none;
         border-radius: 4rem;
         display: block;
+        transition: 0.3s;
 
         &:hover {
             border: 1px solid $orange;
             color: $orange;
+            transition: 0.3s;
         }
     }
 }
@@ -757,7 +765,7 @@ body {
 
     &__image {
         width: 100%;
-        max-width: 351px;
+        max-width: 200px;
         height: 100%;
         object-fit: contain;
     }
@@ -889,6 +897,7 @@ body {
 }
 
 .contact {
+    padding-bottom: 161px;
     
     &-box {
         display: flex;
@@ -981,10 +990,12 @@ body {
         display: block;
         width: 100%;
         box-sizing: border-box;
+        transition: 0.3s;
 
         &:focus {
             border: 1px solid rgba($green, 1);
             outline: none;
+            transition: 0.3s;
         }
 
         &:invalid {
@@ -1012,6 +1023,14 @@ body {
     }
 }
 
+.footer-hr {
+    display: block;
+    border: none;
+    height: 1px;
+    background-image: url(../images/hr.png);
+    margin: 0;
+}
+
 .footer {
     background-image: url(../images/contact.png);
     background-size: cover;
@@ -1024,30 +1043,37 @@ body {
         display: flex;
         text-align: center;
         justify-content: space-between;
-        margin-top: 74px;
-        margin-bottom: 54px;
+        margin-top: 79px;
+        margin-bottom: 21px;
 
         & .logo {
-            transform: scale(1.5);
-            margin-left: 35px;
-            margin-bottom: 100px;
+            width: 18.2rem;
+            height: 4.8rem;
+            margin-top: 7px;
+            flex-basis: 22%;
         }
     }
 
     &__list {
-        margin-bottom: 22px;
+        margin: 0;
+        padding-left: 0;
         list-style: none;
+        text-align: left;
     }
 
     &__item {
-        margin-bottom: 30px;
-        letter-spacing: 1.3px;
+        margin-bottom: 25px;
     }
     
     &__link {
         color: $green;
         font-size: 18px;
         text-decoration: none;
+        transition: 0.3s;
+
+        &:hover {
+            color: $orange;
+        }
     }
 
     &__contact {
@@ -1062,6 +1088,7 @@ body {
         color: $green;
         margin-bottom: 35px;
         text-decoration: none;
+        transition: 0.3s;
 
         &:hover {
             color: $orange;
@@ -1071,8 +1098,9 @@ body {
     &__email {
         font-size: 18px;
         color: $green;
-        margin-bottom: 30px;
+        margin-bottom: 13px;
         text-decoration: none;
+        transition: 0.3s;
 
         &:hover {
             color: $orange;
@@ -1089,6 +1117,7 @@ body {
         &__vk {
             display: flex;
             opacity: 0.8;
+            transition: 0.3s;
 
             &::before {
                 content: '';
@@ -1101,10 +1130,12 @@ body {
                 border: 1px solid rgba($green, 0.4);
                 border-radius: 100%;
                 opacity: 0.8;
+                transition: 0.3s;
             }
 
             &:hover {
                 opacity: 1;
+                transition: 0.3s;
 
                 &::before {
                     opacity: 1;
@@ -1115,6 +1146,7 @@ body {
         &__inst {
             display: flex;
             opacity: 0.8;
+            transition: 0.3s;
 
             &::before {
                 content: '';
@@ -1126,10 +1158,12 @@ body {
                 background-size: 20px;
                 border: 1px solid rgba($green, 0.4);
                 border-radius: 100%;
+                transition: 0.3s;
             }
 
             &:hover {
                 opacity: 1;
+                transition: 0.3s;
 
                 &::before {
                     opacity: 1;
@@ -1140,6 +1174,7 @@ body {
         &__fb {
             display: flex;
             opacity: 0.8;
+            transition: 0.3s;
 
             &::before {
                 content: '';
@@ -1151,10 +1186,12 @@ body {
                 background-size: 20px;
                 border: 1px solid rgba($green, 0.4);
                 border-radius: 100%;
+                transition: 0.3s;
             }
 
             &:hover {
                 opacity: 1;
+                transition: 0.3s;
 
                 &::before {
                     opacity: 1;
@@ -1168,16 +1205,21 @@ body {
         align-items: center;
         justify-content: space-between;
         font-size: 1.6rem;
+    }
+
+    &__copy {
         opacity: 0.6;
     }
 
-    &__author {
+    &__author-text {
         opacity: 0.6;
+    }
 
-        & a {
-            color: $green;
-            font-weight: 500;
-        }
+    &__author-link {
+        color: $green;
+        text-decoration: none;
+        opacity: 0.6;
+        transition: 0.3s;
 
         &:hover {
             opacity: 1;
